--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "doctrine": "^1.2.2",
     "escope": "^3.6.0",
     "espree": "^3.3.1",
+    "esquery": "^0.4.0",
     "estraverse": "^4.2.0",
     "esutils": "^2.0.2",
     "file-entry-cache": "^2.0.0",
